anasayfa tekrardan düzeltildi

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,22 @@
             <span>Kredi Kartı</span>
         </a>
     </div>
+
+    <section class="ms1-section">
+        <div class="mss-header">
+            <h1>Efsane Fiyat, Efsane Teklif</h1>
+            <a href="#" class="inline-flex items-center">Tüm Ürünler<i class="gg-chevron-right" style="--ggs:.7;"></i></a>
+        </div>
+        <div class="m-shop-product-list">
+            <a href="#" class="product-rect-content procut-rect-image">
+                <img src="https://images.hepsiburada.net/banners/s/0/224-371/homepageImage2177_20231031174304.png/format:webp" alt="">
+            </a>
+
+            @@include('components/menus/shop-product-cart-2/index.html')
+            @@include('components/menus/shop-product-cart-2/index.html')
+            @@include('components/menus/shop-product-cart-2/index.html')
+        </div>
+    </section>
     <div class="m-shop-cart-list">
         @@include('components/menus/shop-cart-list/index.html')
         @@include('components/menus/shop-cart-list/index.html')
@@ -34,6 +50,8 @@
             @@include('components/menus/shop-product-cart/index.html')
         </div>
     </section>
+
+
     <div class="m-shop-cart-list">
         @@include('components/menus/shop-cart-list/index.html')
         @@include('components/menus/shop-cart-list/index.html')
