--- a/src/static/header.html
+++ b/src/static/header.html
@@ -56,19 +56,15 @@
     <ul class="h-menus mt-2">
         <li class="h-menu-item">
             <span class="hm-title">Kadın</span>
-            <div class="hm-hover-menu">
-                <div class="">
-                    <h3>Giyim</h3>
-                    <a href="#">Pantolon</a>
-                    <a href="#">Şort</a>
-                </div>
-            </div>
+            @@include('../components/menus/header-hover-menu/index.html')
         </li>
         <li class="h-menu-item">
-            <a href="#">Erkek</a>
+            <span class="hm-title">Erkek</span>
+            @@include('../components/menus/header-hover-menu/index.html')
         </li>
         <li class="h-menu-item">
-            <a href="#">Çocuk</a>
+            <span class="hm-title">Çocuk</span>
+            @@include('../components/menus/header-hover-menu/index.html')
         </li>
         <li class="h-menu-item">
             <a href="#">
