anasayfa banner eklendi

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,28 @@
 @@include('static/header.html')
 
+
+<div class="herousel-content">
+    <div class="hc-wrapper">
+        <ul class="hc-list-menu">
+            <li class="active">
+                <span>Marka Günleri</span>
+            </li>
+            <li>
+                <span>Elektronik</span>
+            </li>
+        </ul>
+        <div class="hcw-content">
+            <div class="hcwc-title">
+                <span class="text-2xl">Efsane indirimlerle</span>
+                <span class="text-3xl font-medium mt-2">şimdi al, şubatta ödemeye başla</span>
+                <button class="btn_ btn_primary mt-4">Acele Et Kaçırma</button>
+            </div>
+            <div class="hcwc-image">
+                <img src="/images/banner.jpeg" alt="">
+            </div>
+        </div>
+    </div>
+</div>
 <div class="max-w-6xl mx-auto main">
     <div class="m-stories">
         <a href="#" class="m-stories-item">
