product sayfası eklendi

--- a/src/index.html
+++ b/src/index.html
@@ -25,15 +25,15 @@
 </div>
 <div class="max-w-6xl mx-auto main">
     <div class="m-stories">
-        <a href="#" class="m-stories-item">
+        <a href="#" class="m-stories-item" data-btn-ripple>
             <img src="https://fakeimg.pl/200x200/282828/eae0d0/?retina=2&text=⭐" alt="">
             <span>Sen De Al</span>
         </a>
-        <a href="#" class="m-stories-item">
+        <a href="#" class="m-stories-item" data-btn-ripple>
             <img src="https://fakeimg.pl/200x200/5285eb/fff/?retina=1&text=Sana%20%C3%96zel" alt="">
             <span>Sana Özel</span>
         </a>
-        <a href="#" class="m-stories-item">
+        <a href="#" class="m-stories-item" data-btn-ripple>
             <img src="https://fakeimg.pl/200x200/2d3d67/fff/?retina=1&text=Kredi%20Kart%C4%B1" alt="">
             <span>Kredi Kartı</span>
         </a>
