--- a/src/static/footer.html
+++ b/src/static/footer.html
@@ -2,7 +2,7 @@
     <div class="mx-auto max-w-6xl w-full">
         <div class="grid grid-cols-2 gap-8  py-6 lg:py-8 md:grid-cols-4">
             <div>
-                <h2 class="mb-6 text-xl font-semibold text-primary-500">Logo</h2>
+                <img class="h-12 mb-6" src="/images/logo.png" />
                 <ul class="text-gray-300 font-medium">
                     <li class="mb-4">
                         <a href="#" class=" hover:underline">Hakkımızda</a>
@@ -34,10 +34,10 @@
                         <a href="#" class="hover:underline">Facebook</a>
                     </li>
                     <li class="mb-4">
-                        <a href="#" class="hover:underline">X</a>
+                        <a href="#" class="hover:underline">Instagram</a>
                     </li>
                     <li class="mb-4">
-                        <a href="#" class="hover:underline">Instagram</a>
+                        <a href="#" class="hover:underline">X</a>
                     </li>
                 </ul>
             </div>
@@ -56,7 +56,7 @@
     </div>
     <div class="bg-gray-900 py-2">
         <div class="max-w-6xl mx-auto flex items-center justify-between">
-            <span class="text-sm  font-semibold">©2023 Logo Tic.A.Ş.-Her Hakkı Saklıdır.</span>
+            <span class="text-sm  font-semibold">©2023 DeneyimSoft.-Her Hakkı Saklıdır.</span>
             <div class="flex gap-2">
                 <a href="#" class="text-sm hover:underline">Çerez Politikası </a>
                 <a href="#" class="text-sm hover:underline">KVK ve Gizlilik Politikası</a>
