--- a/src/static/header.html
+++ b/src/static/header.html
@@ -10,7 +10,7 @@
     <link href="/css/plugins/swiper-bundle.min.css" rel="stylesheet">
 
     <link href="/css/style.css" rel="stylesheet">
-    <link href="https://css.gg/css?={close}|{chevron-right}|{chevron-left}|{chevron-down-o}|{menu-left}|{comment}|{mail}|{phone}|{search}|{user}|{shopping-cart}|{trending-down}" rel="stylesheet" />
+    <link href="https://css.gg/css?={close}|{chevron-right}|{chevron-left}|{chevron-down-o}|{menu-left}|{comment}|{mail}|{phone}|{search}|{user}|{shopping-cart}|{trending-down}|{heart}|{shopping-bag}" rel="stylesheet" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,9 +28,9 @@
 
 <header class="border-b border-solid border-gray-100 px-3 z-10 bg-white sticky top-0">
     <div class="w-full max-w-6xl  mx-auto flex items-center justify-between h-[64px]">
-        <div>
-            <span class="tracking-tight font-bold text-primary-500 text-xl">Logo</span>
-        </div>
+        <a href="/">
+            <img class="h-12" src="/images/logo.png" />
+        </a>
         <div class="relative flex-1 max-w-2xl">
             <input type="text"
                    class="block w-full h-[42px] font-medium pl-4 pr-10 text-sm text-gray-900 outline-none !border border-gray-300 rounded-lg bg-gray-100 focus-visible:ring-primary-500 focus-visible:border-primary-500"
