category sayfası tasarımı eklendi

--- a/src/static/header.html
+++ b/src/static/header.html
@@ -41,10 +41,30 @@
         </div>
 
         <div class="flex gap-3 items-center">
-            <a href="#" class="flex items-center gap-1 hover:text-primary-500">
-                <i class="gg-user" style="--ggs:.8;"></i>
-                <span class="text-sm font-medium" >Giriş Yap</span>
-            </a>
+            <div class="dropdown_">
+                <div class="dropdown_trigger">
+                    <button class="btn_ btn_sm btn_transparent btn_right_chevron">
+                        <i class="gg-user mr-1" style="--ggs:.8;"></i>
+                        Giriş Yap
+                    </button>
+                </div>
+                <div class="dropdown_content">
+                    <ul class="dc_items_list">
+                        <li class="dc_item">
+                            <a href="#" class="">Üye Ol</a>
+
+                        </li>
+                        <li class="dc_item">
+                            <a href="#" class="">Giriş Yap</a>
+
+                        </li>
+                        <li class="dc_item">
+                            <a href="#" class="">Beğendiklerim</a>
+
+                        </li>
+                    </ul>
+                </div>
+            </div>
             <a href="#" class="flex items-center gap-1 hover:text-primary-500">
                 <i class="gg-shopping-cart" style="--ggs:.8;"></i>
                 <span class="text-sm font-medium" >Sepetim <b class="text-primary-500">(2)</b></span>
