--- a/src/pages/product.html
+++ b/src/pages/product.html
@@ -5,14 +5,14 @@
         <div class="pp-info-content">
             <div class="ppi-images">
                 <div class="ppi-image">
-                    <img src="/images/product-big.webp" alt="">
+                    <img alt="" src="/images/product-big.webp">
                 </div>
                 <ul class="mt-3 ppi-small-images">
-                   <li data-btn-ripple>
-                       <img src="/images/product-2.jpeg" alt="">
-                   </li>
-                    <li  class="active" data-btn-ripple>
-                        <img src="/images/product-2.jpeg" alt="">
+                    <li data-btn-ripple>
+                        <img alt="" src="/images/product-2.jpeg">
+                    </li>
+                    <li class="active" data-btn-ripple>
+                        <img alt="" src="/images/product-2.jpeg">
                     </li>
                 </ul>
             </div>
@@ -23,7 +23,7 @@
                     <div class="ppipr-stars">
                         <div class="flex items-center leading-3 justify-center">
                             <span class="text-xl font-medium mr-2">4.7</span>
-                            <input name="rating" type="hidden" class="rating_val" />
+                            <input class="rating_val" name="rating" type="hidden"/>
                             <div class="rating" data-input-class=".rating_val">
                                 <span class="star " data-rating="5"></span>
                                 <span class="star" data-rating="4"></span>
@@ -35,15 +35,15 @@
                         <a href="#">33 Değerlendirme</a>
                     </div>
                 </div>
-                <hr class="border-gray-200 my-2" />
+                <hr class="border-gray-200 my-2"/>
                 <div class="ppi-filter-colors">
                     <span class="ppi-df-title">Renk</span>
                     <ul class=" ppi-fc-list">
                         <li data-btn-ripple>
-                            <img src="/images/product-2.jpeg" alt="">
+                            <img alt="" src="/images/product-2.jpeg">
                         </li>
                         <li class="active" data-btn-ripple>
-                            <img src="/images/product-2.jpeg" alt="">
+                            <img alt="" src="/images/product-2.jpeg">
                         </li>
                     </ul>
                 </div>
@@ -60,7 +60,12 @@
                     <ul class="list-disc list-inside text-gray-500 text-sm mt-1">
                         <li>Kampanya fiyatından satılmak üzere 100 adetten fazla stok sunulmuştur.</li>
                         <li>İncelemiş olduğunuz ürünün satış fiyatını satıcı belirlemektedir.</li>
-                        <li>Bir ürün, birden fazla satıcı tarafından satılabilir. Birden fazla satıcı tarafından satışa sunulan ürünlerin satıcıları ürün için belirledikleri fiyata, satıcı puanlarına, teslimat statülerine, ürünlerdeki promosyonlara, kargonun bedava olup olmamasına ve ürünlerin hızlı teslimat ile teslim edilip edilememesine, ürünlerin stok ve kategorileri bilgilerine göre sıralanmaktadır.</li>
+                        <li>Bir ürün, birden fazla satıcı tarafından satılabilir. Birden fazla satıcı tarafından satışa
+                            sunulan ürünlerin satıcıları ürün için belirledikleri fiyata, satıcı puanlarına, teslimat
+                            statülerine, ürünlerdeki promosyonlara, kargonun bedava olup olmamasına ve ürünlerin hızlı
+                            teslimat ile teslim edilip edilememesine, ürünlerin stok ve kategorileri bilgilerine göre
+                            sıralanmaktadır.
+                        </li>
                     </ul>
                     <button class="btn_ btn_full mt-3">Ürün Özellikleri</button>
                 </div>
@@ -69,7 +74,8 @@
         <section class="ms1-section mt-4">
             <div class="mss-header">
                 <h1>Benzer Ürünler</h1>
-                <a href="#" class="inline-flex items-center">Tüm Ürünler<i class="gg-chevron-right" style="--ggs:.7;"></i></a>
+                <a class="inline-flex items-center" href="#">Tüm Ürünler<i class="gg-chevron-right"
+                                                                           style="--ggs:.7;"></i></a>
             </div>
             <div class="m-shop-product-list">
                 @@include('../components/menus/shop-product-cart-2/index.html')
@@ -81,20 +87,24 @@
         <section class="pp-tabs mt-4">
             <div class="tabs_">
                 <ul class="tabs_list">
-                    <li class="tabs_list_item active" >
+                    <li class="tabs_list_item active">
                         <span class="tabs_list_item_text">Ürün Açıklaması</span>
                     </li>
-                    <li class="tabs_list_item" >
+                    <li class="tabs_list_item">
                         <span class="tabs_list_item_text">Değerlendirmeler</span>
                     </li>
                 </ul>
-                    <div class="tabs_content">
-                        <ul class="list-disc list-inside text-gray-500 text-sm mt-1">
-                            <li>Kampanya fiyatından satılmak üzere 100 adetten fazla stok sunulmuştur.</li>
-                            <li>İncelemiş olduğunuz ürünün satış fiyatını satıcı belirlemektedir.</li>
-                            <li>Bir ürün, birden fazla satıcı tarafından satılabilir. Birden fazla satıcı tarafından satışa sunulan ürünlerin satıcıları ürün için belirledikleri fiyata, satıcı puanlarına, teslimat statülerine, ürünlerdeki promosyonlara, kargonun bedava olup olmamasına ve ürünlerin hızlı teslimat ile teslim edilip edilememesine, ürünlerin stok ve kategorileri bilgilerine göre sıralanmaktadır.</li>
-                        </ul>
-                    </div>
+                <div class="tabs_content">
+                    <ul class="list-disc list-inside text-gray-500 text-sm mt-1">
+                        <li>Kampanya fiyatından satılmak üzere 100 adetten fazla stok sunulmuştur.</li>
+                        <li>İncelemiş olduğunuz ürünün satış fiyatını satıcı belirlemektedir.</li>
+                        <li>Bir ürün, birden fazla satıcı tarafından satılabilir. Birden fazla satıcı tarafından satışa
+                            sunulan ürünlerin satıcıları ürün için belirledikleri fiyata, satıcı puanlarına, teslimat
+                            statülerine, ürünlerdeki promosyonlara, kargonun bedava olup olmamasına ve ürünlerin hızlı
+                            teslimat ile teslim edilip edilememesine, ürünlerin stok ve kategorileri bilgilerine göre
+                            sıralanmaktadır.
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
