hesap ayaları, siparişlerim, beğendiklerim, kuponlarım sayfası eklendi ve sepet sayfası tamamlandı

--- a/src/static/header.html
+++ b/src/static/header.html
@@ -59,13 +59,17 @@
 
                         </li>
                         <li class="dc_item">
-                            <a href="#" class="">Beğendiklerim</a>
+                            <a href="/pages/orders.html" class="">Şiparişlerim</a>
+
+                        </li>
+                        <li class="dc_item">
+                            <a href="/pages/likes.html" class="">Beğendiklerim</a>
 
                         </li>
                     </ul>
                 </div>
             </div>
-            <a href="pages/basket.html" class="flex items-center gap-1 hover:text-primary-500">
+            <a href="/pages/basket.html" class="flex items-center gap-1 hover:text-primary-500">
                 <i class="gg-shopping-cart" style="--ggs:.8;"></i>
                 <span class="text-sm font-medium" >Sepetim <b class="text-primary-500">(2)</b></span>
             </a>
