--- a/src/static/account-left-sidebar.html
+++ b/src/static/account-left-sidebar.html
@@ -1,5 +1,5 @@
 <div class="ap-alsc-wrapper">
-    <div class="flex items-center space-x-2 border-b border-solid border-gray-100 pb-2 mb-2">
+    <div class="flex items-center space-x-2 border-b border-solid border-gray-100 pb-2 mb-2 h-12">
         <img class="w-10 h-10 rounded-full" src="https://avatar.vercel.sh/rauchg.svg?text=DS" alt="">
         <span class="font-medium text-gray-900 line-clamp-1">DeneyimSoft</span>
     </div>
