--- a/src/pages/category.html
+++ b/src/pages/category.html
@@ -7,7 +7,7 @@
                 <div class="cpf-title">
                     <span><b>100+</b> ürün gösteriliyor</span>
                 </div>
-                <ul class="cpf-filters">
+                <ul class="cpf-filters ">
                     @@include('../components/menus/left-filters/check-search/index.html')
                     @@include('../components/menus/left-filters/price-range/index.html')
                     @@include('../components/menus/left-filters/check-input/index.html')
@@ -19,7 +19,20 @@
                 </ul>
             </div>
         </div>
+        <div class="cp-mobile-filter">
+            <div class="cpmf-buttons">
+                <button class="btn_ btn_full btn_left_icon">
+                    <i class="w-6 text-primary-500">@@include('../assets/icons/sort-vertical.svg')</i>
+                    Sırala
+                </button>
+                <button class="btn_ btn_full  btn_left_icon">
+                    <i class="w-6 text-primary-500">@@include('../assets/icons/filter.svg')</i>
+                    Filtrele
+                </button>
+            </div>
+        </div>
         <div class="cp-content">
+
             <div class="m-shop-product-list">
                 @@include('../components/menus/shop-product-cart-2/index.html')
                 @@include('../components/menus/shop-product-cart-2/index.html')
