--- a/src/pages/product.html
+++ b/src/pages/product.html
@@ -3,26 +3,14 @@
     @@include('../components/breadcrumb/index.html')
     <div class="product-page">
         <div class="pp-info-content">
-            <div class="ppi-images">
-                <div class="ppi-image">
-                    <img alt="" src="/images/product-big.webp">
-                </div>
-                <ul class="mt-3 ppi-small-images">
-                    <li data-btn-ripple>
-                        <img alt="" src="/images/product-2.jpeg">
-                    </li>
-                    <li class="active" data-btn-ripple>
-                        <img alt="" src="/images/product-2.jpeg">
-                    </li>
-                </ul>
-            </div>
+            @@include('../components/sliders/product-images/index.html')
             <div class="ppi-infos">
                 <h1 class="ppi-title">Active Sport Gold 125 Ml</h1>
                 <div class="ppi-price-rating">
                     <span class="ppipr-price">2.313,99 <small>TL</small></span>
                     <div class="ppipr-stars">
                         <div class="flex items-center leading-3 justify-center">
-                            <span class="text-xl font-medium mr-2">4.7</span>
+                            <span class="text-base md:text-xl font-medium mr-2">4.7</span>
                             <input class="rating_val" name="rating" type="hidden"/>
                             <div class="rating" data-input-class=".rating_val">
                                 <span class="star " data-rating="5"></span>
@@ -38,18 +26,18 @@
                 <hr class="border-gray-200 my-2"/>
                 <div class="ppi-filter-colors">
                     <span class="ppi-df-title">Renk</span>
-                    <ul class=" ppi-fc-list">
-                        <li data-btn-ripple>
-                            <img alt="" src="/images/product-2.jpeg">
+                    <ul class="ppi-fc-list">
+                        <li>
+                            <a href="#" data-btn-ripple><img alt="" src="/images/product-2.jpeg"></a>
                         </li>
-                        <li class="active" data-btn-ripple>
-                            <img alt="" src="/images/product-2.jpeg">
+                        <li >
+                            <a href="#" class="active" data-btn-ripple> <img alt="" src="/images/product-2.jpeg"></a>
                         </li>
                     </ul>
                 </div>
                 <div class="ppi-basket-favorite">
                     <button class="btn_ btn_full btn_primary flex-1">Sepete Ekle</button>
-                    <button class="btn_ btn_bho"><i class="gg-heart"></i></button>
+                    <button class="btn_ btn_bho btn_icon"><i class="gg-heart"></i></button>
                 </div>
                 <div class="ppi-alert alert_ alert_xs">
                     <i class="gg-shopping-bag alert_icon"></i>
@@ -71,19 +59,7 @@
                 </div>
             </div>
         </div>
-        <section class="ms1-section mt-4">
-            <div class="mss-header">
-                <h1>Benzer Ürünler</h1>
-                <a class="inline-flex items-center" href="#">Tüm Ürünler<i class="gg-chevron-right"
-                                                                           style="--ggs:.7;"></i></a>
-            </div>
-            <div class="m-shop-product-list">
-                @@include('../components/menus/shop-product-cart-2/index.html')
-                @@include('../components/menus/shop-product-cart-2/index.html')
-                @@include('../components/menus/shop-product-cart-2/index.html')
-                @@include('../components/menus/shop-product-cart-2/index.html')
-            </div>
-        </section>
+
         <section class="pp-tabs mt-4">
             <div class="tabs_">
                 <ul class="tabs_list">
@@ -94,7 +70,7 @@
                         <span class="tabs_list_item_text">Değerlendirmeler</span>
                     </li>
                 </ul>
-                <div class="tabs_content">
+                <div class="tabs_content ">
                     <ul class="list-disc list-inside text-gray-500 text-sm mt-1">
                         <li>Kampanya fiyatından satılmak üzere 100 adetten fazla stok sunulmuştur.</li>
                         <li>İncelemiş olduğunuz ürünün satış fiyatını satıcı belirlemektedir.</li>
@@ -107,6 +83,22 @@
                     </ul>
                 </div>
             </div>
+        </section>
+        <section class="ms1-section mt-4">
+            <div class="mss-header">
+                <h1>Benzer Ürünler</h1>
+                <a class="inline-flex items-center" href="#">Tüm Ürünler<i class="gg-chevron-right"
+                                                                           style="--ggs:.7;"></i></a>
+            </div>
+            @@include('../components/sliders/products-slider/index.html')
+        </section>
+        <section class="ms1-section mt-4">
+            <div class="mss-header">
+                <h1>Beğenebileceğin Ürünler</h1>
+                <a class="inline-flex items-center" href="#">Tüm Ürünler<i class="gg-chevron-right"
+                                                                           style="--ggs:.7;"></i></a>
+            </div>
+            @@include('../components/sliders/products-slider/index.html')
         </section>
     </div>
 </div>
