--- a/src/static/footer.html
+++ b/src/static/footer.html
@@ -1,7 +1,7 @@
-<footer class="bg-gray-800 text-white border-t border-solid border-gray-100 mt-3">
-    <div class="mx-auto max-w-6xl w-full">
-        <div class="grid grid-cols-2 gap-8  py-6 lg:py-8 md:grid-cols-4">
-            <div>
+<footer>
+    <div class="f-content">
+        <div class="fc-wrapper">
+            <div class="fcw-item">
                 <img class="h-12 mb-6" src="/images/logo.png" />
                 <ul class="text-gray-300 font-medium">
                     <li class="mb-4">
@@ -55,25 +55,18 @@
         </div>
     </div>
     <div class="bg-gray-900 py-2">
-        <div class="max-w-6xl mx-auto flex items-center justify-between">
+        <div class="max-w-6xl mx-auto flex items-center justify-between flex-col md:flex-row gap-1 md:gap-0">
             <span class="text-sm  font-semibold">©2023 DeneyimSoft.-Her Hakkı Saklıdır.</span>
-            <div class="flex gap-2">
-                <a href="#" class="text-sm hover:underline">Çerez Politikası </a>
-                <a href="#" class="text-sm hover:underline">KVK ve Gizlilik Politikası</a>
+            <div class="flex gap-2 text-xs md:text-sm">
+                <a href="#" class="hover:underline">Çerez Politikası </a>
+                <a href="#" class="hover:underline">KVK ve Gizlilik Politikası</a>
             </div>
         </div>
     </div>
 </footer>
 
 <script>
-    const swiper = new Swiper(".menu-list-swiper", {
-        slidesPerView: "auto",
-        spaceBetween: 10,
-        navigation: {
-            nextEl: ".swiper-button-next",
-            prevEl: ".swiper-button-prev",
-        },
-    });
+
 </script>
 
 
