--- a/src/pages/basket.html
+++ b/src/pages/basket.html
@@ -30,7 +30,7 @@
                             <span class="text-primary-500 ">329,99 TL</span>
                         </div>
                     </div>
-                    <button class="btn_ btn_primary btn_full">Sepeti Onayla</button>
+                    <a href="/pages/checkout.html" class="btn_ btn_primary btn_full">Sepeti Onayla</a>
                 </div>
                 <ul class="bp_summary_bill">
                     <li>
