şipariş verme ve şipariş sonuç ekranları eklendi

--- a/src/static/header.html
+++ b/src/static/header.html
@@ -43,7 +43,7 @@
                 <div class="dropdown_content">
                     <ul class="dc_items_list">
                         <li class="dc_item">
-                            <a href="/pages/login.html" class="">Üye Ol</a>
+                            <a href="/pages/register.html" class="">Üye Ol</a>
 
                         </li>
                         <li class="dc_item">
