--- a/src/pages/checkout.html
+++ b/src/pages/checkout.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="cpd-form">
-                <form action="#">
+                <form action="/pages/order-confirmed.html">
                     <h2 class="cpd-title">Kullanıcı Bilgileri</h2>
 
                     <div class="flex flex-col gap-3">
