--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -27,7 +27,10 @@
                         <label for="password">Şifre</label>
                         <input type="password" name="password" id="password" placeholder="••••••••" class="input_">
                     </div>
+                    <button class="btn_ btn_primary btn_lg btn_full" type="submit">Kayıt Ol</button>
                     <button class="btn_ btn_primary btn_full" type="submit">Kayıt Ol</button>
+                    <button class="btn_ btn_primary btn_sm btn_full" type="submit">Kayıt Ol</button>
+                    <button class="btn_ btn_primary btn_xs btn_full" type="submit">Kayıt Ol</button>
                     <p class="text-sm font-light text-gray-500 dark:text-gray-400">
                         Eğer hesabınız varsa hemen <a href="/pages/register.html" class="link-href">giriş yapın</a>.
                     </p>
