--- a/src/static/head.html
+++ b/src/static/head.html
@@ -1,6 +1,6 @@
 <meta charset="UTF-8">
 <title>E Ticaret</title>
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link href="/css/bootstrap.css" rel="stylesheet">
 
