--- a/src/static/header.html
+++ b/src/static/header.html
@@ -8,7 +8,6 @@
 
 </head>
 <body>
-
 <header>
     <div class="h-content">
         <div class="hc-logo">
@@ -85,26 +84,26 @@
     </div>
     <ul class="h-menus mt-2">
         <li class="h-menu-item">
-            <span class="hm-title">Kadın</span>
+            <span class="hm-title">Promosyon ürünler</span>
             @@include('../components/menus/header-hover-menu/index.html')
         </li>
         <li class="h-menu-item">
-            <span class="hm-title">Erkek</span>
+            <span class="hm-title">Hediyelik ürünler</span>
             @@include('../components/menus/header-hover-menu/index.html')
         </li>
         <li class="h-menu-item">
-            <span class="hm-title">Çocuk</span>
+            <span class="hm-title">Kırtasiye</span>
             @@include('../components/menus/header-hover-menu/index.html')
         </li>
         <li class="h-menu-item">
             <a href="#">
-                Flash Ürünler
+                Oyuncak
                 <span class="bg-rose-100 text-rose-800 text-xs font-medium px-1 py-0.5 rounded">Yeni</span>
             </a>
         </li>
         <li class="h-menu-item">
             <a href="#">
-                Çok Satanlar
+                Koleksiyon ürünler
                 <span class="bg-rose-100 text-rose-800 text-xs font-medium px-1 py-0.5 rounded">Yeni</span>
             </a>
         </li>
