--- a/src/index.html
+++ b/src/index.html
@@ -1,29 +1,46 @@
 @@include('static/header.html')
 
 
+
 <div class="herousel-content">
     <div class="hc-wrapper">
-        <ul class="hc-list-menu">
-            <li class="active">
-                <span>Marka Günleri</span>
-            </li>
-            <li>
-                <span>Elektronik</span>
-            </li>
-        </ul>
-        <div class="hcw-content">
-            <div class="hcwc-title">
-                <span class="text-2xl">Efsane indirimlerle</span>
-                <span class="text-3xl font-medium mt-2">şimdi al, şubatta ödemeye başla</span>
-                <button class="btn_ btn_primary mt-4">Acele Et Kaçırma</button>
+        <div class="tabs_">
+            <div class="tab_list tl_center tl_light tl_white tl_rounded_full">
+                <button class="tab_item active" data-tab="#tab1">Marka Günleri</button>
+                <button class="tab_item" data-tab="#tab2">Elektronik</button>
             </div>
-            <div class="hcwc-image">
-                <img src="/images/banner.jpeg" alt="">
+            <div class="tab_content">
+                <div id="tab1" class="tab_ active">
+                    <div class="hcw-content">
+                        <div class="hcwc-title">
+                            <span class="text-2xl">Efsane indirimlerle</span>
+                            <span class="text-3xl font-medium mt-2">şimdi al, şubatta ödemeye başla</span>
+                            <button class="btn_ btn_primary mt-4">Acele Et Kaçırma</button>
+                        </div>
+                        <div class="hcwc-image">
+                            <img src="/images/banner.jpeg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div id="tab2" class="tab_">
+                    <div class="hcw-content">
+                        <div class="hcwc-title">
+                            <span class="text-2xl">Efsane indirimlerle</span>
+                            <span class="text-3xl font-medium mt-2">şimdi al, şubatta ödemeye başla</span>
+                            <button class="btn_ btn_primary mt-4">Acele Et Kaçırma</button>
+                        </div>
+                        <div class="hcwc-image">
+                            <img src="/images/banner.jpeg" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
 <div class="max-w-6xl mx-auto main">
+
     @@include('components/sliders/stories-slider/index.html')
 
     <section class="ms1-section">
