add order details

--- a/src/pages/product.html
+++ b/src/pages/product.html
@@ -52,10 +52,10 @@
                 <div class="ppi-basket-favorite">
                     <div class="ppi-bf-piece" data-piece data-total-product-count="24">
                         <button data-piece-decrease-button>-</button>
-                        <input maxlength="3" readonly type="text" value="1"/>
+                            <input maxlength="3" readonly type="text" value="1"/>
                         <button data-piece-increase-button>+</button>
                     </div>
-                    <button class="btn_ btn_full btn_primary flex-1">Sepete Ekle</button>
+                    <button class="btn_ btn_full btn_shine btn_primary flex-1">Sepete Ekle</button>
                     <button class="btn_ btn_bho btn_icon"><i class="gg-heart"></i></button>
                 </div>
                 <div class="ppi-alert alert_ alert_xs">
@@ -88,11 +88,7 @@
                         <button class="tab_item" data-tab="#tabs2">Değerlendirmeler</button>
                         <button class="tab_item" data-tab="#tabs3">İptal ve İade Koşulları</button>
                     </div>
-                    <div class="tab_list tl_primary tl_underlined">
-                        <button class="tab_item active" data-tab="#tabs1">Ürün Açıklaması</button>
-                        <button class="tab_item" data-tab="#tabs2">Değerlendirmeler</button>
-                        <button class="tab_item" data-tab="#tabs3">İptal ve İade Koşulları</button>
-                    </div>
+
                     <div class="tab_content">
                         <div id="tabs1" class="tab_ active">
                             <ul class="list-disc list-inside text-gray-500 text-sm">
