--- a/src/static/account-left-sidebar.html
+++ b/src/static/account-left-sidebar.html
@@ -1,39 +1,67 @@
-<div class="ap-alsc-wrapper">
-    <div class="flex items-center space-x-2 border-b border-solid border-gray-100 pb-2 mb-2 h-12">
-        <img class="w-10 h-10 rounded-full" src="https://avatar.vercel.sh/rauchg.svg?text=DS" alt="">
-        <span class="font-medium text-gray-900 line-clamp-1">DeneyimSoft</span>
-    </div>
-    <ul class="flex flex-col gap-2 ">
-        <li>
-            <a href="/pages/account_settings.html" class="btn_ btn_start btn_full btn_sm btn_left_icon btn_transparent">
-                <i class="w-6 text-teal-500">@@include('../assets/icons/profile.svg')</i>
-                Hesap Ayarları
-            </a>
-        </li>
-        <li>
-            <a href="/pages/orders.html" class="btn_ btn_start btn_full btn_sm btn_transparent btn_left_icon">
-                <i class="w-6 text-emerald-500">@@include('../assets/icons/box.svg')</i>
-                Siparişlerim
-            </a>
-        </li>
-        <li>
-            <a href="/pages/likes.html" class="btn_ btn_start btn_full btn_sm btn_transparent btn_left_icon">
-                <i class="w-6 text-red-500">@@include('../assets/icons/hearts.svg')</i>
-                Beğendiklerim
-            </a>
-        </li>
-        <li>
-            <a href="/pages/coupons.html" class="btn_ btn_start btn_full btn_sm btn_transparent btn_left_icon">
-                <i class="w-6 text-indigo-500">@@include('../assets/icons/gift.svg')</i>
-                Kuponlarım
-            </a>
-        </li>
-        <li class="pt-2 border-t border-solid border-gray-200">
-            <button class="btn_ btn_start btn_sm btn_full btn_transparent btn_left_icon">
-                <i class="w-6 text-red-700">@@include('../assets/icons/logout.svg')</i>
-                Çıkış Yap
-            </button>
-        </li>
-    </ul>
 
+<div class="drawer_ drawer_show_md" id="account_menu_drawer" style="--max-width:315px;">
+    <div class="drawer_content">
+        <div class="drawer_content_header">
+            <h3 class="dch_title">Sepetlerim</h3>
+            <button class="btn_ btn_icon btn_sm" data-drawer-close>
+                <i data-lucide="x"></i>
+            </button>
+        </div>
+        <div class="drawer_content_body">
+            <div class="ap-als-content">
+                <div class="ap-alsc-wrapper">
+                    <div class="ap_alsc_user">
+                        <img class="" src="https://avatar.vercel.sh/rauchg.svg?text=DS" alt="">
+                        <span class="">DeneyimSoft</span>
+                    </div>
+                    <ul class="flex flex-col gap-2 ">
+                        <li>
+                            <a href="/pages/account_settings.html" class="btn_ btn_active btn_start btn_full btn_sm btn_left_icon btn_transparent">
+                                <i class="w-6 text-teal-500">@@include('../assets/icons/profile.svg')</i>
+                                Hesap Ayarları
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/pages/orders.html" class="btn_ btn_start btn_full btn_sm btn_transparent btn_left_icon">
+                                <i class="w-6 text-emerald-500">@@include('../assets/icons/box.svg')</i>
+                                Siparişlerim
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/pages/likes.html" class="btn_ btn_start btn_full btn_sm btn_transparent btn_left_icon">
+                                <i class="w-6 text-red-500">@@include('../assets/icons/hearts.svg')</i>
+                                Beğendiklerim
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/pages/coupons.html" class="btn_ btn_start btn_full btn_sm btn_transparent btn_left_icon">
+                                <i class="w-6 text-indigo-500">@@include('../assets/icons/gift.svg')</i>
+                                Kuponlarım
+                            </a>
+                        </li>
+                        <li class="pt-2 border-t border-solid border-gray-200">
+                            <button class="btn_ btn_start btn_sm btn_full btn_transparent btn_left_icon">
+                                <i class="w-6 text-red-700">@@include('../assets/icons/logout.svg')</i>
+                                Çıkış Yap
+                            </button>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="ap-mobile-header">
+    <div class="apm_header_content">
+        <button class="btn_ btn_icon" data-drawer-id="#account_menu_drawer" >
+            <i class="gg-menu-left hcl-menu-trigger" style=""></i>
+        </button>
+        <div class="my-aph-texts">
+            <h3>DeneyimSoft</h3>
+            <span>info@deneyimsoft.com</span>
+        </div>
+    </div>
 </div>
