--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,14 @@
                         <div class="hcwc-title">
                             <span class="text-2xl">Efsane indirimlerle</span>
                             <span class="text-3xl font-medium mt-2">şimdi al, şubatta ödemeye başla</span>
-                            <button class="btn_ btn_primary mt-4">Acele Et Kaçırma</button>
+                            <button class="btn_ btn_primary btn_lg mt-4 btn_shine">Acele Et Kaçırma</button>
                         </div>
                         <div class="hcwc-image">
                             <img src="/images/banner.jpeg" alt="">
                         </div>
                     </div>
                 </div>
+
                 <div id="tab2" class="tab_">
                     <div class="hcw-content">
                         <div class="hcwc-title">
@@ -40,8 +41,59 @@
 </div>
 
 <div class="max-w-6xl mx-auto main">
-
     @@include('components/sliders/stories-slider/index.html')
+
+
+    <div class="relative overflow-hidden bg-white">
+        <div class="pb-80 pt-16 sm:pb-40 sm:pt-24 lg:pb-48 lg:pt-40">
+            <div class="relative mx-auto max-w-7xl ">
+                <div class="sm:max-w-lg">
+                    <h1 class="text-4xl font-bold sm:leading-[4.5rem] tracking-tight text-gray-900 sm:text-6xl">Her İhtiyacınıza Uygun Matbaa ve Ozalit Hizmetleri!</h1>
+                    <p class="mt-4 text-xl text-gray-500">Matbaa ve ozalit işlerinizde güvenilir ve kaliteli hizmet sunuyoruz. Geniş ürün yelpazemiz ile her türlü ihtiyacınıza uygun çözümler sunmaktayız</p>
+                </div>
+                <div>
+                    <div class="mt-10">
+                        <!-- Decorative image grid -->
+                        <div aria-hidden="true" class="pointer-events-none lg:absolute lg:inset-y-0 lg:mx-auto lg:w-full lg:max-w-7xl">
+                            <div class="absolute transform sm:left-1/2 sm:top-0 sm:translate-x-8 lg:left-1/2 lg:top-1/2 lg:-translate-y-1/2 lg:translate-x-8">
+                                <div class="flex items-center space-x-6 lg:space-x-8">
+                                    <div class="grid flex-shrink-0 grid-cols-1 gap-y-6 lg:gap-y-8">
+                                        <div class="h-64 w-44 overflow-hidden rounded-lg shadow-small sm:opacity-0 lg:opacity-100">
+                                            <img src="/images/product1.jpg" alt="" class="h-full w-full object-cover object-center">
+                                        </div>
+                                        <div class="h-64 w-44 overflow-hidden rounded-lg shadow-small">
+                                            <img src="/images/product2.jpg" alt="" class="h-full w-full object-cover object-center">
+                                        </div>
+                                    </div>
+                                    <div class="grid flex-shrink-0 grid-cols-1 gap-y-6 lg:gap-y-8">
+                                        <div class="h-64 w-44 overflow-hidden shadow-small rounded-lg">
+                                            <img src="/images/product3.jpg" alt="" class="h-full w-full object-cover object-center">
+                                        </div>
+                                        <div class="h-64 w-44 overflow-hidden shadow-small rounded-lg">
+                                            <img src="/images/product4.jpg" alt="" class="h-full w-full object-cover object-center">
+                                        </div>
+                                        <div class="h-64 w-44 overflow-hidden shadow-small rounded-lg">
+                                            <img src="/images/product1.jpg" alt="" class="h-full w-full object-cover object-center">
+                                        </div>
+                                    </div>
+                                    <div class="grid flex-shrink-0 grid-cols-1 gap-y-6 lg:gap-y-8">
+                                        <div class="h-64 w-44 overflow-hidden shadow-small rounded-lg">
+                                            <img src="/images/product2.jpg" alt="" class="h-full w-full object-cover object-center">
+                                        </div>
+                                        <div class="h-64 w-44 overflow-hidden shadow-small rounded-lg">
+                                            <img src="/images/product3.jpg" alt="" class="h-full w-full object-cover object-center">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <a href="#" class="btn_ btn_lg btn_primary btn_shine">Alışverişe Başla</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <section class="ms1-section">
         <div class="mss-header">
