--- a/src/static/footer.html
+++ b/src/static/footer.html
@@ -1,66 +1,27 @@
-<footer>
-    <div class="f-content">
-        <div class="fc-wrapper">
-            <div class="fcw-item">
-                <img class="h-12 mb-6" src="/images/logo.png" />
-                <ul class="text-gray-300 font-medium">
-                    <li class="mb-4">
-                        <a href="#" class=" hover:underline">Hakkımızda</a>
-                    </li>
-                    <li class="mb-4">
-                        <a href="#" class="hover:underline">Kariyer</a>
-                    </li>
-                    <li class="mb-4">
-                        <a href="#" class="hover:underline">İletişim</a>
-                    </li>
-                    <li class="mb-4">
-                        <a href="#" class="hover:underline">Blog</a>
-                    </li>
-                </ul>
-            </div>
-
-            <div>
-                <h2 class="mb-6 text-sm font-semibold text-white uppercase">Kampanyalar</h2>
-                <ul class="text-gray-300 font-medium">
-                    <li class="mb-4">
-                        <a href="#" class="hover:underline">Aktif Kampanyalar</a>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <h2 class="mb-6 text-sm font-semibold text-white uppercase">Sosyal Medya</h2>
-                <ul class="text-gray-300 font-medium">
-                    <li class="mb-4">
-                        <a href="#" class="hover:underline">Facebook</a>
-                    </li>
-                    <li class="mb-4">
-                        <a href="#" class="hover:underline">Instagram</a>
-                    </li>
-                    <li class="mb-4">
-                        <a href="#" class="hover:underline">X</a>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <h2 class="mb-6 text-sm font-semibold text-white uppercase">Yardım</h2>
-                <ul class="text-gray-300 font-medium">
-                    <li class="mb-4">
-                        <a href="#" class="hover:underline">Sıkça Sorulan Sorular</a>
-                    </li>
-                    <li class="mb-4">
-                        <a href="#" class="hover:underline">Nasıl İade Edebilirim</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+<footer class="text-gray-500 bg-white px-4 py-5 max-w-6xl mx-auto md:px-8">
+    <div class="max-w-lg sm:mx-auto sm:text-center">
+        <img src="/images/logo.png" class="w-32 sm:mx-auto" />
+        <p class="leading-relaxed mt-2 text-[15px]">
+            Matbaa ve ozalit işlerinizde profesyonel çözümler sunan firmamız, geniş ürün yelpazesi ve yüksek kaliteli hizmet anlayışı ile sizlere hizmet vermektedir. Müşteri memnuniyetini ön planda tutarak, her türlü baskı ve ozalit ihtiyaçlarınıza uygun çözümler sunuyoruz.
+        </p>
     </div>
-    <div class="bg-gray-900 py-2">
-        <div class="max-w-6xl mx-auto flex items-center justify-between flex-col md:flex-row gap-1 md:gap-0">
-            <span class="text-sm  font-semibold">©2023 DeneyimSoft.-Her Hakkı Saklıdır.</span>
-            <div class="flex gap-2 text-xs md:text-sm">
-                <a href="#" class="hover:underline">Çerez Politikası </a>
-                <a href="#" class="hover:underline">KVK ve Gizlilik Politikası</a>
-            </div>
+    <ul class="items-center justify-center mt-8 space-y-5 sm:flex sm:space-x-4 sm:space-y-0">
+        <li class=" hover:text-gray-800"><a href=#>Hakkımızda</a></li>
+        <li class=" hover:text-gray-800"><a href=#>Blog</a></li>
+        <li class=" hover:text-gray-800"><a href=#>Yardım</a></li>
+    </ul>
+    <div class="mt-8 items-center justify-between sm:flex">
+        <div class="mt-4 sm:mt-0">
+            &copy; 2024 JolyFox Tüm Hakları Saklıdır.
+        </div>
+        <div class="mt-6 sm:mt-0">
+            <ul class="flex items-center space-x-4">
+                <li class="w-8 h-8 border rounded-full flex items-center justify-center">
+                    <a href="#" class="block">
+                        <i data-lucide="instagram" stroke-width="1.6" width="100%" height="100%"></i>
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
 </footer>
