--- a/src/static/left-slide-menu.html
+++ b/src/static/left-slide-menu.html
@@ -1,48 +1,49 @@
-<div class="slide-menu">
-    <div class="flex justify-between items-center py-2 px-3">
-        <a href="/">
-            <img class="h-8 object-contain" src="/images/logo.png" />
-        </a>
-        <button type="button" data-btn-ripple
-                class="slide-close-button  w-8 h-8 flex items-center justify-center bg-gray-600/10 rounded-xl">
-            <i class="gg-close text-gray-800" style=" --ggs: 1;"></i>
-        </button>
-    </div>
-    <div class="flex flex-col px-2 mt-1">
-        <ul class="flex flex-col gap-2 ">
-            <li>
-                <a href="/pages/account_settings.html" class="btn_ btn_start btn_full btn_sm btn_left_icon btn_transparent">
-                    <i class="w-6 text-teal-500">@@include('../assets/icons/profile.svg')</i>
-                    Hesap Ayarları
-                </a>
-            </li>
-            <li>
-                <a href="/pages/orders.html" class="btn_ btn_start btn_full btn_sm btn_transparent btn_left_icon">
-                    <i class="w-6 text-emerald-500">@@include('../assets/icons/box.svg')</i>
-                    Siparişlerim
-                </a>
-            </li>
-            <li>
-                <a href="/pages/likes.html" class="btn_ btn_start btn_full btn_sm btn_transparent btn_left_icon">
-                    <i class="w-6 text-red-500">@@include('../assets/icons/hearts.svg')</i>
-                    Beğendiklerim
-                </a>
-            </li>
-            <li>
-                <a href="/pages/coupons.html" class="btn_ btn_start btn_full btn_sm btn_transparent btn_left_icon">
-                    <i class="w-6 text-indigo-500">@@include('../assets/icons/gift.svg')</i>
-                    Kuponlarım
-                </a>
-            </li>
-            <li class="pt-2 border-t border-solid border-gray-200">
-                <button class="btn_ btn_start btn_sm btn_full btn_transparent btn_left_icon">
-                    <i class="w-6 text-red-700">@@include('../assets/icons/logout.svg')</i>
-                    Çıkış Yap
-                </button>
-            </li>
-        </ul>
+<div class="drawer_" id="home_menu" style="--max-width:315px;">
+    <div class="drawer_content">
+        <div class="drawer_content_header">
+            <a href="/">
+                <img class="h-8 object-contain" src="/images/logo.png" />
+            </a>
+            <button class="btn_ btn_icon btn_sm" data-drawer-close>
+                <i data-lucide="x"></i>
+            </button>
+        </div>
+        <div class="drawer_content_body p-0">
+            <div class="flex flex-col px-2 mt-1">
+                <ul class="flex flex-col gap-2 ">
+                    <li>
+                        <a href="/pages/account_settings.html" class="btn_ btn_start btn_full btn_sm btn_left_icon btn_transparent">
+                            <i class="w-6 text-teal-500">@@include('../assets/icons/profile.svg')</i>
+                            Hesap Ayarları
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/pages/orders.html" class="btn_ btn_start btn_full btn_sm btn_transparent btn_left_icon">
+                            <i class="w-6 text-emerald-500">@@include('../assets/icons/box.svg')</i>
+                            Siparişlerim
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/pages/likes.html" class="btn_ btn_start btn_full btn_sm btn_transparent btn_left_icon">
+                            <i class="w-6 text-red-500">@@include('../assets/icons/hearts.svg')</i>
+                            Beğendiklerim
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/pages/coupons.html" class="btn_ btn_start btn_full btn_sm btn_transparent btn_left_icon">
+                            <i class="w-6 text-indigo-500">@@include('../assets/icons/gift.svg')</i>
+                            Kuponlarım
+                        </a>
+                    </li>
+                    <li class="pt-2 border-t border-solid border-gray-200">
+                        <button class="btn_ btn_start btn_sm btn_full btn_transparent btn_left_icon">
+                            <i class="w-6 text-red-700">@@include('../assets/icons/logout.svg')</i>
+                            Çıkış Yap
+                        </button>
+                    </li>
+                </ul>
 
+            </div>
+        </div>
     </div>
-
 </div>
-<div class="slider-overlay"></div>
